JSF setup
Set up project structure and add initial files.